deps/chakrashim/core/test/Array/array_sort.baseline
10,120,2,3,4,5,6,8,9,9
2,3,4,5,6,8,9,9,10,120
7,8,25,41
41,25,8,7
for,sample,some,strings,testing
for,sample,some,strings,testing - Output different in cscript due to NaN
1,2,3
10
1,1.2,4,4.8,12
TypeError: Array.prototype.sort: argument is not a JavaScript object
1,2,3
